[gd_scene load_steps=9 format=3 uid="uid://c8mhqxasgvcaw"]

[ext_resource type="Script" uid="uid://du63r6okycjs6" path="res://Scripts/UI/new_captain_notif.gd" id="1_0w8d6"]
[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="1_16lxh"]
[ext_resource type="Texture2D" uid="uid://i5etyaevvg3k" path="res://Assets/CaptainPortraits/Captain8.png" id="1_61vqk"]
[ext_resource type="StyleBox" uid="uid://cqvxsqe7hceth" path="res://Theme/Darkblue_Circle.tres" id="2_edtct"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ve8i"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 1.0
bg_color = Color(0.0515312, 0.0690738, 0.0920171, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 196
border_color = Color(0.615304, 0.57196, 0.322451, 1)
border_blend = true
corner_radius_top_left = 34
corner_radius_top_right = 34
corner_detail = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_size = 4

[sub_resource type="Animation" id="Animation_0634q"]
resource_name = "Fadeout"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_v5284"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88w5f"]
_data = {
&"Fadeout": SubResource("Animation_0634q"),
&"RESET": SubResource("Animation_v5284")
}

[node name="CaptainNotification" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_16lxh")
script = ExtResource("1_0w8d6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -203.0
offset_right = 136.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ve8i")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_61vqk")
expand_mode = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -19.0
offset_right = 199.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_edtct")

[node name="Label" type="Label" parent="PanelContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0515312, 0.0690738, 0.0920171, 1)
theme_override_colors/font_outline_color = Color(0.615304, 0.57196, 0.322451, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 31
text = "New Captain Recruited
George"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_88w5f")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
